# offline-assistant-embeddedai

./: .gitignore  README.md  jarvis.py  main.py  pyproject.toml
assistant/: cli.py  executor.py  executor_common.py  executor_linux.py  executor_windows.py  parser.py  profiles.py  speech_to_text.py  wake_word.py
metrics/: audio_benchmark.py  benchmark.py  monitor.py
models/vosk-model-small-en-us-0.15/conf/: model.conf
